gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__chain_five_partitions_long_spanning_edge.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                   █████ █████ █████ █████ █████ █████                                                                  "
"                 ╭─█N2██─█N3██─█N4██─█N5██─█N6██─█N7██─╮                                                                "
"     █████ █████ │ █████ █████ █████ █████ █████ █████ │ █████ █████                                                    "
"     █N0██─█N1██─┤                                     ├─█N8██─█N9██                                                    "
"     █████ █████ ╰─────────────────────────────────────╯ █████ █████                                                    "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
