gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__chain_three_partitions_spanning_edge.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                   █████ █████                                                                      "
"                 ╭─█N2██─█N3██─╮                                                                    "
"     █████ █████ │ █████ █████ │ █████ █████                                                        "
"     █N0██─█N1██─┤             ├─█N4██─█N5██                                                        "
"     █████ █████ ╰─────────────╯ █████ █████                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
