gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__cycle_with_chord.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"             █████ █████ █████ █████                                            "
"           ╭─█N7██─█N0██─█N1██─█N2██─╮                                          "
"     █████ │ █████ █████ █████ █████ │ █████ █████ █████                        "
"   ╭─█N6██─┤                         ├─█N3██─█N4██─█N5██─╮                      "
"   ▲ █████ │                         │ █████ █████ █████ │                      "
"   │       ╰─────────────────────────╯                   │                      "
"   │                                                     │                      "
"   ╰──◀───────────────◀───────────────◀───────────────◀──╯                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
