gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__cycle_with_chord_pinned.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                        ╭──────◀───────────────◀──────╮                         "
"                        │                             │                         "
"     █████ █████ █████  ╰─╮ █████ █████ █████ █████ ╭─╯  █████ █████ █████ █████"
"  ╭──█N0██─█N1██─█N2██────┴─█N3██─█N4██─█N5██─█N6██─┴────█N7██─█N8██─█N9██─█N10█"
"  │  █████ █████ █████      █████ █████ █████ █████      █████ █████ █████ █████"
"  │                                                                             "
"  ╰──◀───────────────◀───────────────◀───────────────◀───────────────◀──────────"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
