gen-tui/src/testing/snapshots/gen_tui__testing__snapshot_tests__cycle_with_chords.snap
---
source: gen-tui/src/testing/snapshot_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                             █████ █████                                        "
"                           ╭─█N7██─█N0██─╮                                      "
"             █████ █████   │ █████ █████ │ █████ █████                          "
"           ╭─█N5██─█N6██───┤             ├─█N1██─█N2██─╮                        "
"     █████ │ █████ █████   │             │ █████ █████ │ █████                  "
"   ╭─█N4██─┤             ╭─│─────────────╯             ├─█N3██─╮                "
"   │ █████ │             │ │                           │ █████ │                "
"   │       ╰─────────────╯ │                           │       │                "
"   │                       ╰───────────────────────────╯       │                "
"   │                                                           │                "
"   │                                                           │                "
"   ╰─────◀───────────────◀───────────────◀───────────────◀─────╯                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
